<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >



    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/drw_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/logo"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/drw_userId"
        android:background="@drawable/box"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uAccount"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/mkWhite"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <TextView
        android:background="@drawable/box"
        android:padding="15dp"
        android:id="@+id/drHead_eula"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eula"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/mkWhite"
        />

    <TextView
        android:background="@drawable/box"
        android:padding="15dp"
        android:id="@+id/drHead_about"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/mkWhite"
        />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
