<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context="com.chapdast.ventures.activities.OnlineDictionary">

    <EditText
        android:id="@+id/od_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/box_white"
        android:hint="@string/word_to_translate"
        android:padding="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/od_input">

        <RadioButton
            android:layout_weight=".1"
            android:id="@+id/od_fa_to_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layoutDirection="rtl"
            android:text="@string/fa_to_en"
            android:buttonTint="@color/mkRed"/>
        <RadioButton
            android:layout_weight=".1"
            android:id="@+id/od_en_to_fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/en_to_fa"
            android:buttonTint="@color/mkRed"/>
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/od_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/English"
            android:buttonTint="@color/mkRed"
            />
    </RadioGroup>

    <Button
        android:id="@+id/od_trans_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/box_red"
        android:text="@string/translate"
        android:textColor="@color/mkWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/od_trans_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <LinearLayout
            android:id="@+id/od_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/od_progress"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/od_trans_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_white"
                android:padding="15dp"
                android:text="تر جمه ترجمه"
                android:textAlignment="viewEnd"
                android:textColor="@color/mkBlack"
                android:textSize="15sp" />

            <ListView

                android:id="@+id/od_trans_sec"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/box_white"
                android:padding="15dp"
                android:text="secoTrnas"
                android:textAlignment="viewStart"
                android:textColor="@color/mkWhite"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
